# Numba-Xutils

./: .gitignore  README.md  _for_benching.py  _st_env.py  benchmarks.py  examples.py  pyproject.toml  pyrefly.toml  radon.cfg  routines.py  rt.bat  ruff.toml  tstot.md  utils.py
nbux/: __init__.py  _rng.py  _sort.py  _utils.py  _vops.py  rng.py  sort.py  utils.py
nbux/algo/: __init__.py  _dev.py  _linesearch.py  _misc.py
nbux/op/: __init__.py  _misc.py  _vector.py  vector.py
notebooks/: Implicit Indexing.ipynb  examples.py
tests/: __init__.py  conftest.py  numba_layers.py
tests/integration/: test_imports.py  test_linesearch_convergence.py
tests/integration/linesearch_output/: test_signedroot_newton_convergence_report_jit.md  test_signedroot_newton_convergence_report_py.md  test_signedroot_quadinterp_convergence_report_jit.md  test_signedroot_quadinterp_convergence_report_py.md  test_signedroot_secant_convergence_report_jit.md  test_signedroot_secant_convergence_report_py.md  test_signseeking_halley_convergence_report_jit.md  test_signseeking_halley_convergence_report_py.md
tests/report/: nocoverage.md
tests/report/pytest/2026-02-13 21-46-43 UTC/: coverage.txt
tests/report/pytest/2026-02-15 11-18-12 UTC/: coverage.txt  failures.txt
tests/unit/: test_nbux_algo_public_api.py  test_nbux_op_public_api.py  test_nbux_public_api.py  test_nbux_rng_utils_public_modules.py  test_nbux_sort_vector_extra.py  test_nbux_utils_algo_extra.py
typings/nbux/: __init__.pyi  _rng.pyi  _sort.pyi  _utils.pyi
typings/nbux/_op/: _vector.pyi
(+10 files in other folders)
